--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="icon" href="/aset/e08-logo-mini.png">
+    <link rel="icon" href="aset/e08-logo-mini.png">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <div class="top-wrapper">
         <div class="container">
             <div>
-                <img src="/aset/e08-logo.png" alt="" width="240px">
+                <img src="aset/e08-logo.png" alt="" width="240px">
             </div>
             <div>
                 <h1>YOUR BIGGEST ADVENTURE AWAITS YOU!</h1>
@@ -97,7 +97,7 @@
     </div>
     <footer>
         <div class="container">
-            <img src="/aset/e08-logo.png" width="70px">
+            <img src="aset/e08-logo.png" width="70px">
             <p>Start your journey!</p>
         </div>
     </footer>
