--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="btn-wrapper">
-            <input type="text" class="btn input">
+            <input type="text" class="btn input" value="cari destinasi wisata">
             <a href="#" class="btn facebook"><span class="fa fa-search"></span></a>
         </div>
     </div>
