--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <p>Best Platform for Tour and travel</p>
             </div>
         </div>
-        <div class="btn-wrapper">
+        <!-- <div class="btn-wrapper">
             <input type="text" class="btn input" value="cari destinasi wisata">
             <a href="#" class="btn facebook"><span class="fa fa-search"></span></a>
-        </div>
+        </div> -->
     </div>
     <div class="lesson-wrapper">
         <div class="container">
